- Send Respuesta Lo llamaremos a la brevedad

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -89,7 +89,7 @@
        <!-- Enlaces de navegación -->
     <div class="nav-links">
         <a th:href="@{/contactos}">Carga de Contactos</a>
-        <a href="eventos.html">Eventos</a>
+        <a th:href="@{/eventos}">Eventos</a>
         <a href="#agenda">Agenda</a>
     </div>
 
