--- a/src/main/resources/templates/contactos.html
+++ b/src/main/resources/templates/contactos.html
@@ -122,7 +122,7 @@
             <span th:text="${alerta}"></span>
         </div>
 
-        <a href="index.html">
+        <a href="/">
             <img src="https://img.icons8.com/ios-filled/50/000000/home.png" alt="Home" class="home-icon" title="Volver a Inicio">
         </a>
 
