--- a/src/main/resources/templates/eventos.html
+++ b/src/main/resources/templates/eventos.html
@@ -1,82 +1,184 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Eventos</title>
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            margin: 0;
-            padding: 20px;
-            background-color: #f9f9f9;
-            color: #333;
-        }
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Eventos</title>
+        <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
 
-        h1 {
-            margin-bottom: 20px;
-        }
+        <style>
+            body {
+                font-family: Arial, sans-serif;
+                display: flex;
+                flex-direction: column;
+                justify-content: center;
+                align-items: center;
+                margin: 0;
+                padding: 20px;
+                background-color: #f9f9f9;
+                color: #333;
+            }
 
-        table {
-            width: 80%;
-            border-collapse: collapse;
-            margin-top: 20px;
-        }
+            h1 {
+                margin-bottom: 20px;
+            }
 
-        table, th, td {
-            border: 1px solid #ddd;
-        }
+            table {
+                width: 80%;
+                border-collapse: collapse;
+                margin-top: 20px;
+            }
 
-        th, td {
-            padding: 15px;
-            text-align: center;
-        }
+            table, th, td {
+                border: 1px solid #ddd;
+            }
 
-        th {
-            background-color: #f2f2f2;
-            font-weight: bold;
-        }
+            th, td {
+                padding: 15px;
+                text-align: center;
+            }
 
-        .icon {
-            width: 24px;
-            height: 24px;
-        }
-    </style>
-</head>
-<body>
+            th {
+                background-color: #f2f2f2;
+                font-weight: bold;
+            }
 
-    <h1>Eventos</h1>
+            .icon {
+                width: 24px;
+                height: 24px;
+            }
 
-  <table>
-        <thead>
-            <tr>
-                <th>Apellido</th>
-                <th>Nombre</th>
-                <th>Teléfono</th>
-                <th>Acción</th>
-                <th>Notas</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr th:each="objeto : ${objetos}">
-                <td th:text="${objeto.apellido}"></td>
-                <td th:text="${objeto.nombre}"></td>
-                <td th:text="${objeto.telefono}"></td>
-                <td th:text="${objeto.evento}"></td>
-                <td>
-                    <i class="fa-regular fa-file" th:if="${objeto.hayNotas == 0}"></i>
-                    <i class="fa-regular fa-file-lines" th:if="${objeto.hayNotas == 1}"></i>
-                </td>
-            </tr>
-        </tbody>
-    </table>
+            .modal-overly {
+                position: fixed;
+                top: 0;
+                left: 0;
+                width: 100%;
+                height: 100%;
+                background: rgba(0, 0, 0, 0.5);
+                display: none;
+                justify-content: center;
+                align-items: center;
+                z-index: 1000;
+            }
 
-    <a href="/">
-        <img src="https://img.icons8.com/ios-filled/50/000000/home.png" alt="Home" class="home-icon" title="Volver a Inicio">
-    </a>
-</body>
+            .modal {
+                width: 40%;
+                height: 40%;
+                background: white;
+                border-radius: 10px;
+                box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+                display: flex;
+                flex-direction: column;
+                justify-content: center;
+                align-items: flex-start;
+                position: relative;
+                padding: 20px;
+                margin-left: 15%;
+                margin-right: 15%;
+            }
+
+            .cerrar-modal {
+                position: absolute;
+                top: 10px;
+                right: 10px;
+                background: none;
+                border: none;
+                font-size: 20px;
+                cursor: pointer;
+            }
+
+            input {
+                width: 80%;
+            }
+
+            #desc {
+                width: 80%;
+                flex-grow: 1;
+                display: flex;
+                justify-content: center;
+                vertical-align: top;
+                resize: none;
+            }
+
+            .botones-de-acceso {
+                display: flex;
+                justify-content: space-between;
+            }
+
+            .btn {
+                padding: 10px 20px;
+                margin-right: 3px;
+                font-size: 16px;
+                cursor: pointer;
+                background-color: #e0e0e0;
+                transition: background-color 0.3s, transform 0.3s;
+                border: none;
+            }
+            .btn:hover {
+                background-color: #d1d1d1;
+                transform: scale(1.05);
+            }
+        </style>
+
+    </head>
+    <body>
+        <h1>Eventos</h1>
+
+        <table>
+            <thead>
+                <tr>
+                    <th>Apellido</th>
+                    <th>Nombre</th>
+                    <th>Teléfono</th>
+                    <th>Acción</th>
+                    <th>Notas</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr th:each="objeto : ${objetos}">
+                    <td th:text="${objeto.apellido}"></td>
+                    <td th:text="${objeto.nombre}"></td>
+                    <td th:text="${objeto.telefono}"></td>
+                    <td th:text="${objeto.evento}"></td>
+                    <td>
+                        <button class="btn" onclick="abrirModal()">
+                            <i class="fa-regular fa-file" th:if="${objeto.hayNotas == 0}"></i>
+                            <i class="fa-regular fa-file-lines" th:if="${objeto.hayNotas == 1}"></i>
+                        </button>
+                    </td>
+                </tr>
+            </tbody>
+        </table>
+
+        <!-- Modal de notas -->
+        <div class="modal-overly" id="modal-overly">
+            <div class="modal">
+                <button class="cerrar-modal" onclick="cerrarModal()">&times;</button>
+
+                <label for="notero">Nombre de la persona</label>
+                <input id="notero" type="text" placeholder=""><br>
+
+                <br>
+                <textarea id="desc" placeholder="Esctibe la nota acá..."></textarea><br>
+
+                <div class="botones-de-acceso">
+                    <button class="btn" onclick="abrirModal()">Grabar</button>
+                    <button class="btn" onclick="abrirModal()">Cancelar</button>
+                </div>
+            </div>
+        </div>
+
+        <script>
+            const abrirModal = () => {
+                document.getElementById('modal-overly').style.display = 'flex';
+            }
+            const cerrarModal = () => {
+                document.getElementById('modal-overly').style.display = 'none';
+            }
+        </script>
+
+        <a href="/">
+            <img src="https://img.icons8.com/ios-filled/50/000000/home.png" alt="Home" class="home-icon" title="Volver a Inicio">
+        </a>
+    </body>
 </html>
