--- a/src/main/resources/templates/eventos.html
+++ b/src/main/resources/templates/eventos.html
@@ -152,31 +152,33 @@
         </table>
 
 
-        <!-- Modal de notas -->
-        <div class="modal-overly" id="modal-overly">
-            <div class="modal">
-                <button class="cerrar-modal" onclick="cerrarModal()">&times;</button>
-
-                <label for="notero">Nombre de la persona</label>
-                <input id="notero" type="text" placeholder=""><br>
-
-                <br>
-                <textarea id="desc" placeholder="Esctibe la nota acá..."></textarea><br>
-
-                <div class="botones-de-acceso">
-                    <button class="btn" onclick="cerrarModal()">Grabar</button>
-                    <button class="btn" onclick="cerrarModal()">Cancelar</button>
-                </div>
-            </div>
-        </div>
+        <!-- Modal de notas. Se abre dinamicamente -->
+        <div id="modalContenedor"></div>
 
         <script>
             const abrirModal = () => {
-                document.getElementById('modal-overly').style.display = 'flex';
-            }
+                fetch('/templates/nota.html')
+                        .then(res => res.text())
+                        .then(dataModal => {
+                            document.getElementById('modalContenedor').innerHTML = dataModal;
+                    
+                            const modal = document.getElementById('modal-overly');
+                            if (!modal) {
+                                console.log("WARN: El modal no se abrió como corresponde...");
+                            } else {
+                                modal.style.display = "flex";
+                            }
+                }).catch(err => console.log("ERROR: ", err));
+            };
+
             const cerrarModal = () => {
-                document.getElementById('modal-overly').style.display = 'none';
-            }
+                const modal = document.getElementById('modal-overly');
+                if (!modal) {
+                    console.log("WARN: El modal no se cerró como corresponde...");
+                } else {
+                    modal.style.display = "none";
+                }
+            };
         </script>
 
         <a href="/">
