--- a/src/main/resources/templates/notas.html
+++ b/src/main/resources/templates/notas.html
@@ -48,17 +48,20 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
                 cursor: pointer;
             }
 
-            input {
-                width: 80%;
+            #usuario {
+                width: 200px; 
+                height: 30px; 
+                padding: 5px;
+                font-size: 16px;
+                box-sizing: border-box;
             }
 
-            #desc {
-                width: 80%;
-                flex-grow: 1;
-                display: flex;
-                justify-content: center;
-                vertical-align: top;
-                resize: none;
+            #nota {
+                width: 420px; 
+                height: 210px;
+                padding: 5px;
+                font-size: 16px;
+                box-sizing: border-box; 
             }
 
             .botones-de-acceso {
