--- a/src/main/resources/templates/notas.html
+++ b/src/main/resources/templates/notas.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <!--
 Click nbfs://nbhost/SystemFileSystem/Templates/Licenses/license-default.txt to change this license
@@ -92,7 +93,7 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
                 <label for="notero">Nombre de la persona</label>
                 <input id="usuario" th:field="*{user}" type="text" placeholder="" name="usuario" ><br>
                 
-                <input type="hidden" name="id" th:value="${id}" th:field="*{id}" >
+                <input type="hidden" name="id" th:value="${oNota.id}" th:field="*{id}" >
                  
                 <br>
                 <textarea id="nota" th:field="*{note}" th:text="${oNota.note}" placeholder="Escribe la nota acá..." name="nota">
@@ -106,5 +107,9 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
                 </form>
             </div>
         </div>
+        
+        <a href="/">
+            <img src="https://img.icons8.com/ios-filled/50/000000/home.png" alt="Home" class="home-icon" title="Volver a Inicio">
+        </a>
     </body>
 </html>
