--- a/src/main/resources/templates/eventos.html
+++ b/src/main/resources/templates/eventos.html
@@ -86,7 +86,7 @@
         <script src="https://cdn.datatables.net/1.12.1/js/jquery.dataTables.min.js"></script>
         <script>
             $(document).ready(function () {
-                $('#myTable').DataTable({
+                $('#eventosTable').DataTable({
                     language: {
                         "decimal": ",",
                         "thousands": ".",
