--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -95,5 +95,9 @@
     <!-- Icono de Home -->
     <img src="https://img.icons8.com/ios-filled/50/000000/home.png" alt="Home" class="home-icon">
 
+    <footer style="margin-top: 50px; font-size: small; text-align: center;">
+        Build: <span th:text="${buildTime}">fecha</span>
+    </footer>
+    
 </body>
 </html>
