--- a/src/main/resources/templates/eventos.html
+++ b/src/main/resources/templates/eventos.html
@@ -141,5 +141,9 @@
                 XLSX.writeFile(wb, fileName);
             }
         </script>
+
+        <a href="/">
+            <img src="https://img.icons8.com/ios-filled/50/000000/home.png" alt="Home" class="home-icon" title="Volver a Inicio">
+        </a>
     </body>
 </html>
