--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -95,9 +95,23 @@
     <!-- Icono de Home -->
     <img src="https://img.icons8.com/ios-filled/50/000000/home.png" alt="Home" class="home-icon">
 
+    <script>
+        fetch('/version')
+            .then(response => response.json())
+            .then(data => {
+                document.getElementById('buildVersion').innerText = data.buildVersion;
+            })
+            .catch(error => {
+                console.error('Error al obtener la versión:', error);
+                document.getElementById('buildVersion').innerText = 'Error';
+            });
+    </script>
+
+
     <footer style="margin-top: 50px; font-size: small; text-align: center;">
-        Build SortFix Message: <span th:text="${buildTime}">fecha</span>
+        Build : <span id="buildVersion">Cargando...</span>
     </footer>
-    
+
+
 </body>
 </html>
