Implement new template without name

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -81,7 +81,8 @@
 
     <!-- Encabezado -->
     <header>
-        <h1>Bienvenido a Nuestro Sitio</h1>
+        <img src="https://estudioguiggiortiz.com.ar/site/images/logo_vertical.webp" alt="Foto de perfil" class="profile-image">
+        <h1>Bienvenido a Estudio Guiggi v2026</h1>
         <p>Explora nuestras opciones para gestionar tus contactos y eventos.</p>
                <h12 th:text="'Hola, ' ">Hola, Thymeleaf!</h2>
     </header>
